--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>مینی‌اپ تست پیشرفته</title>
+    <title>به ارتش رباتیک آرشیوزی خوش آمدید </title>
     <style>
         body {
             font-family: Vazir, Tahoma, sans-serif;
